--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.spanishinquisition.treecompany">
+          xmlns:tools="http://schemas.android.com/tools" package="com.spanishinquisition.treecompany">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
@@ -11,20 +11,20 @@
             android:label="@string/app_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity">
+            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
+        <activity android:name=".activitties.RegisterActivity">
         </activity>
-        <activity android:name=".LoginActivity">
+        <activity android:name=".activitties.LoginActivity">
         </activity>
-        <activity android:name=".HomeScreenActivity">
+        <activity android:name=".activitties.HomeScreenActivity">
         </activity>
-        <activity
-                android:name=".HomeActivity"
-                android:configChanges="orientation|keyboardHidden|screenSize"
-                android:label="@string/title_activity_home"
-                android:theme="@style/FullscreenTheme">
-        </activity>
-        <activity android:name=".MainActivity">
+        <!--<activity-->
+                <!--android:name=".HomeActivity"-->
+                <!--android:configChanges="orientation|keyboardHidden|screenSize"-->
+                <!--android:label="@string/title_activity_home"-->
+                <!--android:theme="@style/FullscreenTheme">-->
+        <!--</activity>-->
+        <activity android:name=".activitties.SplashScreenActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
