tab in de moduleActivity(FIRST COMMIT)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         <activity android:name=".activities.LoginActivity">
         </activity>
 
-        <activity android:name=".activities.ConnectActivity"/>
+        <activity android:name=".activities.ModuleActivity"/>
 
         <activity android:name=".activities.SplashScreenActivity">
             <intent-filter>
